--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,4 +1,19 @@
 .header {
-  background: #333;
-  height: 80px;
+  background: var(--gray-800);
+  display: flex;
+  justify-content: center;
+  padding: 1.25rem 0;
+}
+
+.header div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+  color: var(--gray-100);
+  font-size: 1.25rem;
+}
+
+.header div img {
+  height: 2rem;
 }
