--- a/src/global.css
+++ b/src/global.css
@@ -12,6 +12,22 @@
   --green-500: #00875f;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+html, body {
+  -ms-overflow-style: none; 
+  scrollbar-width: none;  
+}
+
+:focus {
+  outline: transparent;
+  box-shadow: 0 0 0 2px var(--green-500);
+}
+
 * {
   margin: 0;
   padding: 0;
