feat: Add comment component

--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -62,5 +62,10 @@
 
 .sidebar footer a:hover {
   background: var(--green-500);
-  color: var(--white);
+  color
+  : var(--white);
+}
+
+.commentList {
+  margin-top: 2rem;
 }
