feat: Add responsiveness

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,3 +7,13 @@
   grid-template-columns: 16rem 1fr;
   align-items: flex-start;
 }
+
+@media (max-width: 768px) {
+  html {
+    font-size: 87.5%;
+  }
+
+  .wrapper {
+    grid-template-columns: 1fr;
+  }
+}
