--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -105,8 +105,13 @@
   transition: background-color 0.1s;
 }
 
-.commentForm button[type="submit"]:hover,
-.commentForm button[type="submit"]:focus {
+.commentForm button[type="submit"]:hover:not(:disabled),
+.commentForm button[type="submit"]:focus:not(:disabled) {
 background: var(--green-300);
 box-shadow: none;
+}
+
+.commentForm button[type="submit"]:disabled {
+  opacity: 0.7;
+  cursor: not-allowed;
 }
